--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
 typing-inspection==0.4.1
+s8common==0.1.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
