--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -23,6 +23,7 @@ fastapi==0.115.14
 filelock==3.18.0
 frozenlist==1.7.0
 greenlet==3.2.3
+gunicorn==23.0.0
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
@@ -30,6 +31,7 @@ jmespath==1.0.1
 jose==1.0.0
 motor==3.7.0
 multidict==6.6.0
+packaging==25.0
 passlib==1.7.4
 platformdirs==4.3.8
 propcache==0.3.2
