--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,6 +40,7 @@ pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyJWT==2.10.1
 pymongo==4.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
