--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,8 +8,9 @@ anyio==4.9.0
 attrs==25.3.0
 audioop-lts==0.2.1
 bcrypt==4.3.0
-boto3==1.39.7
 botocore==1.39.7
+boto3==1.39.7
+b2sdk==1.26.0
 cffi==1.17.1
 click==8.2.1
 colorama==0.4.6
@@ -50,7 +51,7 @@ pytz==2025.2
 PyYAML==6.0.2
 rsa==4.9.1
 s3transfer==0.13.0
-s8==0.1.7
+s8==0.2.0
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
